--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.1.3",
     "hastscript": "^7.0.2",
     "next": "^12.1.4",
+    "next-remote-watch": "^1.0.0",
     "react-bootstrap": "^2.2.3",
     "remark": "^14.0.2",
     "remark-breaks": "^3.0.2",
@@ -19,7 +20,10 @@
     "remark-stringify": "^10.0.2",
     "unified": "^10.1.2",
     "unist-util-inspect": "^7.0.0",
-    "yaml": "^1.10.2"
+    "yaml": "^1.10.2",
+    "textlint": "^12.2.1",
+    "textlint-rule-preset-ja-spacing": "^2.2.0",
+    "textlint-rule-preset-japanese": "^7.0.0"
   },
   "scripts": {
     "start": "next-remote-watch story.md"
@@ -35,10 +39,5 @@
     "url": "https://github.com/torufurukawa/stories/issues"
   },
   "homepage": "https://github.com/torufurukawa/stories#readme",
-  "devDependencies": {
-    "next-remote-watch": "^1.0.0",
-    "textlint": "^12.2.1",
-    "textlint-rule-preset-ja-spacing": "^2.2.0",
-    "textlint-rule-preset-japanese": "^7.0.0"
-  }
+  "type": "module"
 }
